--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -5,7 +5,10 @@
 	<div class="col-sm-6">
 		<h1 class="monospace">
 			{{ venue.name }}
-		</h1>
+    </h1>
+    <h3>
+			<a href="/venues/{{ venue.id }}/edit"><button class="btn btn-default btn-lg">edit</button></a>
+    </h3>
 		<p class="subtitle">
 			ID: {{ venue.id }}
 		</p>
