--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -7,7 +7,8 @@
 			{{ venue.name }}
     </h1>
     <h3>
-			<a href="/venues/{{ venue.id }}/edit"><button class="btn btn-default btn-lg">edit</button></a>
+      <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-sm">edit</button></a>
+      <button class="btn btn-default btn-sm" data-id="{{ venue.id }}" id="venue-delete-btn">delete</button>
     </h3>
 		<p class="subtitle">
 			ID: {{ venue.id }}
@@ -77,6 +78,20 @@
 		{% endfor %}
 	</div>
 </section>
-
+<script>
+  const deleteBtn = document.querySelector('#venue-delete-btn');
+  deleteBtn.onclick = function(e) {
+    const venueId = e.target.dataset['id'];
+    fetch('/venues/' + venueId, {
+      method: 'DELETE'
+    })
+    .then(response => response.json())
+    .then(response => {
+      if (response.success === true) {
+        window.location.href = response.url
+      }
+    })
+  }
+</script>
 {% endblock %}
 
